harmonized API with plotly examples

--- a/example/notebook.ipynb
+++ b/example/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import { newPlot } from \"tslab-plotly\";\n",
+    "import Plotly from \"tslab-plotly\";\n",
     "\n",
     "import * as tslab from \"tslab\";\n",
     "const zs = [];\n",
@@ -16,7 +16,7 @@
     "    row.push(z);\n",
     "  }\n",
     "}\n",
-    "newPlot(\n",
+    "Plotly.newPlot(\n",
     "  tslab,\n",
     "  [\n",
     "    {\n",
@@ -82,10 +82,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "import { newPlot } from \"tslab-plotly\";\n",
+    "import Plotly from \"tslab-plotly\";\n",
     "import * as tslab from \"tslab\";\n",
     "\n",
-    "newPlot(tslab, [\n",
+    "Plotly.newPlot(tslab, [\n",
     "  {\n",
     "    x: [1, 2, 3, 4, 5],\n",
     "    y: [1, 2, 4, 8, 16],\n",
@@ -141,9 +141,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 1,
+   "source": [
+    "import Plotly from \"tslab-plotly\";\n",
+    "import * as tslab from \"tslab\";\n",
+    "\n",
+    "var layout = Plotly.newPlot(\n",
+    "  tslab,\n",
+    "  [\n",
+    "    {\n",
+    "      z: [\n",
+    "        [10, 10.625, 12.5, 15.625, 20],\n",
+    "        [5.625, 6.25, 8.125, 11.25, 15.625],\n",
+    "        [2.5, 3.125, 5.0, 8.125, 12.5],\n",
+    "        [0.625, 1.25, 3.125, 6.25, 10.625],\n",
+    "        [0, 0.625, 2.5, 5.625, 10],\n",
+    "      ],\n",
+    "      type: \"contour\",\n",
+    "    },\n",
+    "  ],\n",
+    "  {\n",
+    "    title: \"Basic Contour Plot\",\n",
+    "  }\n",
+    ");\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div\n",
+       "      id=\"_plotly-davnfew34ejy\"\n",
+       "      style=\"width:600px;height:600px;\">\n",
+       "    </div>\n",
+       "    <div\n",
+       "      id=\"_plotly-davnfew34ejy__\"\n",
+       "    </div>\n",
+       "    <script>\n",
+       "      if (!window.__PlotlyPromise){\n",
+       "        window.__PlotlyPromise = fetch('https://cdn.plot.ly/plotly-latest.min.js')\n",
+       "        .then(response => response.text().then(script => {\n",
+       "          // define = undefined so that requirejs doesn't interfere in vscode\n",
+       "          eval('{var define = undefined;'+script+'}');\n",
+       "          return window.Plotly;\n",
+       "        }))\n",
+       "      }\n",
+       "      {\n",
+       "        const plotId = \"_plotly-davnfew34ejy\";\n",
+       "\n",
+       "        const plotContainer = document.getElementById(\"_plotly-davnfew34ejy\")\n",
+       "        const countEl = document.getElementById(\"_plotly-davnfew34ejy__\")\n",
+       "        window.__PlotlyPromise.then(Plotly => {\n",
+       "          countEl.innerText = (countEl.innerText||0)+1\n",
+       "            const args = [[{\"z\":[[10,10.625,12.5,15.625,20],[5.625,6.25,8.125,11.25,15.625],[2.5,3.125,5,8.125,12.5],[0.625,1.25,3.125,6.25,10.625],[0,0.625,2.5,5.625,10]],\"type\":\"contour\"}],{\"margin\":{\"l\":50,\"r\":50,\"b\":25,\"t\":50},\"width\":600,\"height\":600,\"title\":\"Basic Contour Plot\"},null];\n",
+       "            ((container, data, layout) => {\n",
+       "    return Plotly.newPlot(container, data, layout);\n",
+       "})(plotContainer,...args)\n",
+       "        }).catch(e => {\n",
+       "          plotContainer.innerText = e.message + '\\n' + e.stack\n",
+       "        })\n",
+       "\n",
+       "      }  \n",
+       "    </script>\n",
+       "    "
+      ]
+     },
+     "metadata": {}
+    }
+   ],
    "metadata": {}
   }
  ],
@@ -151,7 +217,7 @@
   "kernelspec": {
    "display_name": "TypeScript",
    "language": "typescript",
-   "name": "tslab"
+   "name": "typescript"
   },
   "language_info": {
    "codemirror_mode": {
